<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cami"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/signin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/logo"
        android:gravity="center" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="89dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="334dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="107dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="267dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="493dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="118dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="412dp"
        android:text="@string/surname"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="355dp"
        android:background="#502290E6"
        android:drawablePadding="10dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="273dp"
        android:background="#502290E6"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="498dp"
        android:background="#502290E6"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/txtSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="126dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="436dp"
        android:background="#502290E6"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUyeOl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"

        android:layout_marginEnd="20dp"
        android:layout_marginBottom="191dp"
        android:background="#6c7b8b"
        android:text="@string/uyeol" />


</RelativeLayout>